--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
       chmod +x scripts/setup.sh
       chmod +x scripts/build.sh
       ./scripts/build.sh
-    startCommand: gunicorn wsgi:app
+    startCommand: gunicorn wsgi:app  # Updated this line
     envVars:
       - key: HF_TOKEN
         fromGroup: hf_token
