--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ langchain
 langchain-community
 langchain-huggingface
 langchain-core
+langchain-pinecone
 python-dotenv
 faiss-cpu
 sentence-transformers
@@ -16,3 +17,4 @@ gunicorn
 numpy
 requests
 urllib3
+pinecone-client 
